// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Instructions /> with a valid token displays the token 1`] = `
<div
  className="pf-l-grid pf-m-gutter"
>
  <div
    className="pf-c-content"
  >
    <h1>
      Install OpenShift Container Platform 4
    </h1>
    <p>
      Use this guide to install a new OpenShift 4 cluster on your Amazon Web Services (AWS) account. We’ll get you up and running in a few quick steps. For on-premise deployments, please
       
      <a
        href="https://docs.openshift.com/container-platform/4.1/welcome/index.html"
        target="_blank"
      >
        refer to the documentation
         
        <span
          aria-hidden="true"
          className="fa fa-external-link"
        />
      </a>
      .
    </p>
    <div
      className="alert alert-warning alert-dismissable"
    >
      <span
        className="pficon pficon-warning-triangle-o"
      />
      Red Hat collects a limited amount of telemetry data. By installing OpenShift Container Platform 4, you accept our data collection policy.
       
      <a
        href="https://github.com/openshift/telemeter/blob/master/docs/data-collection.md"
        target="_blank"
      >
        Learn more
         
        <span
          aria-hidden="true"
          className="fa fa-external-link"
        />
      </a>
       
      about the data we collect.
    </div>
    <Popover
      appendTo={[Function]}
      aria-label="How do I install OpenShift 4 on-premise?"
      bodyContent={
        <div>
          OpenShift 4 is now available for on-premise deployments. The same steps as the AWS install shown here will apply, but a few additional steps around DNS and deploying Red Hat Enterprise Linux CoreOS are required.
           
          <a
            href="https://docs.openshift.com/container-platform/4.1/welcome/index.html"
            target="_blank"
          >
            Learn more
             
            <span
              aria-hidden="true"
              className="fa fa-external-link"
            />
          </a>
          .
        </div>
      }
      className={null}
      closeBtnAriaLabel="Close"
      enableFlip={true}
      footerContent={null}
      headerContent={null}
      hideOnOutsideClick={true}
      isVisible={null}
      maxWidth="calc(1.5rem + 18.75rem)"
      onHidden={[Function]}
      onHide={[Function]}
      onMount={[Function]}
      onShow={[Function]}
      onShown={[Function]}
      position="top"
      shouldClose={[Function]}
      zIndex={9999}
    >
      <a
        href="javascript:;"
      >
        <span
          className="pficon pficon-info"
        />
         
        How do I install OpenShift 4 on-premise?
      </a>
    </Popover>
    <h3
      className="pf-c-title pf-m-md"
      id="list1-title"
    >
      Pre-requisites:
    </h3>
    <ul
      aria-labelledby="list1-title"
    >
      <li>
        <a
          href="https://docs.openshift.com/container-platform/4.1/installing/installing_aws/installing-aws-account.html"
          target="_blank"
        >
          Configure an AWS account
           
          <span
            aria-hidden="true"
            className="fa fa-external-link"
          />
        </a>
         
        to host the cluster
      </li>
    </ul>
    <h3
      className="pf-c-title pf-m-md"
      id="list2-title"
    >
      Procedure
    </h3>
    <ol
      aria-labelledby="list2-title"
    >
      <li>
        Download the OpenShift installer
      </li>
      <li>
        Deploy the cluster
      </li>
      <li>
        Access your cluster
      </li>
    </ol>
    <h3
      className="cluster-install-step"
    >
      Step 1: Download the OpenShift installer
    </h3>
    <p>
      Download and extract the latest version of the OpenShift installer for your operating system from the link below.
    </p>
    <p>
      Note: The OpenShift installer is only available for Linux and macOS at this time.
    </p>
    <p>
      <a
        target="_blank"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          className="install--download-installer"
          disabled={false}
          tabIndex="-1"
        >
          <span
            aria-hidden="true"
            className="fa fa-download"
          />
            Download Installer
        </Button>
      </a>
    </p>
    <Popover
      appendTo={[Function]}
      aria-label="What is the OpenShift installer?"
      bodyContent={
        <div>
          The OpenShift Installer is a command-line installation wizard, prompting the user for values that it cannot determine on its own and providing reasonable defaults for everything else. For more advanced users, the installer provides facilities for varying levels of customization.
           
          <a
            href="https://docs.openshift.com/container-platform/4.1/installing/installing_aws/installing-aws-customizations.html"
            target="_blank"
          >
            Learn more
             
            <span
              aria-hidden="true"
              className="fa fa-external-link"
            />
          </a>
          .
        </div>
      }
      className={null}
      closeBtnAriaLabel="Close"
      enableFlip={true}
      footerContent={null}
      headerContent={null}
      hideOnOutsideClick={true}
      isVisible={null}
      maxWidth="calc(1.5rem + 18.75rem)"
      onHidden={[Function]}
      onHide={[Function]}
      onMount={[Function]}
      onShow={[Function]}
      onShown={[Function]}
      position="top"
      shouldClose={[Function]}
      zIndex={9999}
    >
      <a
        href="javascript:;"
      >
        <span
          className="pficon pficon-info"
        />
         
        What is the OpenShift installer?
      </a>
    </Popover>
    <h3
      className="cluster-install-step"
    >
      Step 2: Deploy the cluster
    </h3>
    <p>
      Next, deploy the cluster following the installer’s interactive prompt. Enter your pull secret, provided below, when prompted:
    </p>
    <pre>
      <span
        className="noselect"
      >
        $ 
      </span>
      ./openshift-install create cluster
    </pre>
    <div>
      <Download
        content="{\\"hi\\":\\"I have no errors\\"}
"
        file="pull-secret"
        style={
          Object {
            "display": "inline",
          }
        }
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          disabled={false}
        >
          <span
            aria-hidden="true"
            className="fa fa-download"
          />
            Download Pull Secret
        </Button>
      </Download>
      <CopyToClipboard
        onCopy={[Function]}
        text="{\\"hi\\":\\"I have no errors\\"}
"
      >
        <span
          style={
            Object {
              "margin": "10px",
            }
          }
        >
          <button
            className="btn-text-link install--copy-pull-secret"
            disabled={false}
            id="copyPullSecret"
            tabIndex="0"
            type="button"
          >
            <span
              aria-hidden="true"
              className="fa fa-paste"
            />
              Copy Pull Secret
          </button>
        </span>
      </CopyToClipboard>
    </div>
    <p />
    <Popover
      appendTo={[Function]}
      aria-label="Want to customize your deployment?"
      bodyContent={
        <div>
          The installer allows many aspects of the clusters it creates to be customized by creating and editing targets.
           
          <a
            href="https://docs.openshift.com/container-platform/4.1/installing/installing_aws/installing-aws-customizations.html"
            target="_blank"
          >
            Learn more
             
            <span
              aria-hidden="true"
              className="fa fa-external-link"
            />
          </a>
          .
        </div>
      }
      className={null}
      closeBtnAriaLabel="Close"
      enableFlip={true}
      footerContent={null}
      headerContent={null}
      hideOnOutsideClick={true}
      isVisible={null}
      maxWidth="calc(1.5rem + 18.75rem)"
      onHidden={[Function]}
      onHide={[Function]}
      onMount={[Function]}
      onShow={[Function]}
      onShown={[Function]}
      position="top"
      shouldClose={[Function]}
      zIndex={9999}
    >
      <a
        href="javascript:;"
      >
        <span
          className="pficon pficon-info"
        />
         
        Want to customize your deployment?
      </a>
    </Popover>
    <h3
      className="cluster-install-step"
    >
      Step 3: Access Your Cluster
    </h3>
    <p>
      You have taken the first steps to create your cluster. While your cluster finishes installing, take a moment to download the OpenShift command-line tools and add them to your
       
      <code>
        PATH
      </code>
      .
    </p>
    <p>
      <a
        target="_blank"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          className="install--download-cli"
          disabled={false}
          tabIndex="-1"
        >
          <span
            aria-hidden="true"
            className="fa fa-download"
          />
            Download Command-line Tools
        </Button>
      </a>
    </p>
    <p>
      When the installer is complete you will see the console URL and credentials for accessing your new cluster. A
       
      <code>
        kubeconfig
      </code>
       
      file will also be generated for you to use with the
       
      <code>
        oc
      </code>
       
      CLI tools you downloaded.
    </p>
    <Popover
      appendTo={[Function]}
      aria-label="Do you need to troubleshoot your installation?"
      bodyContent={
        <div>
          Unfortunately, there will always be some cases where OpenShift fails to install properly. In these events, it is helpful to understand the
           
          <a
            href="https://github.com/openshift/installer/blob/master/docs/user/troubleshooting.md#common-failures"
            target="_blank"
          >
            likely failure modes
             
            <span
              aria-hidden="true"
              className="fa fa-external-link"
            />
          </a>
           
          as well as
           
          <a
            href="https://github.com/openshift/installer/blob/master/docs/user/troubleshooting.md#generic-troubleshooting"
            target="_blank"
          >
            how to troubleshoot
             
            <span
              aria-hidden="true"
              className="fa fa-external-link"
            />
          </a>
           
          the failure.
        </div>
      }
      className={null}
      closeBtnAriaLabel="Close"
      enableFlip={true}
      footerContent={null}
      headerContent={null}
      hideOnOutsideClick={true}
      isVisible={null}
      maxWidth="calc(1.5rem + 18.75rem)"
      onHidden={[Function]}
      onHide={[Function]}
      onMount={[Function]}
      onShow={[Function]}
      onShown={[Function]}
      position="top"
      shouldClose={[Function]}
      zIndex={9999}
    >
      <a
        href="javascript:;"
      >
        <span
          className="pficon pficon-info"
        />
         
        Do you need to troubleshoot your installation?
      </a>
    </Popover>
  </div>
</div>
`;

exports[`<Instructions /> with an invalid token displays an error 1`] = `
<div
  className="pf-l-grid pf-m-gutter"
>
  <div
    className="pf-c-content"
  >
    <Alert
      className="install--errors"
      onDismiss={null}
      title="{token.error.msg}"
      type="error"
      variant="danger"
    >
      Please try again by refreshing the page. If the problem persists, please report the issue to
       
      <a
        href="mailto:***REMOVED***"
        target="_blank"
      >
        ***REMOVED***
         
        <span
          aria-hidden="true"
          className="fa fa-external-link"
        />
      </a>
      .
    </Alert>
    <h1>
      Install OpenShift Container Platform 4
    </h1>
    <p>
      Use this guide to install a new OpenShift 4 cluster on your Amazon Web Services (AWS) account. We’ll get you up and running in a few quick steps. For on-premise deployments, please
       
      <a
        href="https://docs.openshift.com/container-platform/4.1/welcome/index.html"
        target="_blank"
      >
        refer to the documentation
         
        <span
          aria-hidden="true"
          className="fa fa-external-link"
        />
      </a>
      .
    </p>
    <div
      className="alert alert-warning alert-dismissable"
    >
      <span
        className="pficon pficon-warning-triangle-o"
      />
      Red Hat collects a limited amount of telemetry data. By installing OpenShift Container Platform 4, you accept our data collection policy.
       
      <a
        href="https://github.com/openshift/telemeter/blob/master/docs/data-collection.md"
        target="_blank"
      >
        Learn more
         
        <span
          aria-hidden="true"
          className="fa fa-external-link"
        />
      </a>
       
      about the data we collect.
    </div>
    <Popover
      appendTo={[Function]}
      aria-label="How do I install OpenShift 4 on-premise?"
      bodyContent={
        <div>
          OpenShift 4 is now available for on-premise deployments. The same steps as the AWS install shown here will apply, but a few additional steps around DNS and deploying Red Hat Enterprise Linux CoreOS are required.
           
          <a
            href="https://docs.openshift.com/container-platform/4.1/welcome/index.html"
            target="_blank"
          >
            Learn more
             
            <span
              aria-hidden="true"
              className="fa fa-external-link"
            />
          </a>
          .
        </div>
      }
      className={null}
      closeBtnAriaLabel="Close"
      enableFlip={true}
      footerContent={null}
      headerContent={null}
      hideOnOutsideClick={true}
      isVisible={null}
      maxWidth="calc(1.5rem + 18.75rem)"
      onHidden={[Function]}
      onHide={[Function]}
      onMount={[Function]}
      onShow={[Function]}
      onShown={[Function]}
      position="top"
      shouldClose={[Function]}
      zIndex={9999}
    >
      <a
        href="javascript:;"
      >
        <span
          className="pficon pficon-info"
        />
         
        How do I install OpenShift 4 on-premise?
      </a>
    </Popover>
    <h3
      className="pf-c-title pf-m-md"
      id="list1-title"
    >
      Pre-requisites:
    </h3>
    <ul
      aria-labelledby="list1-title"
    >
      <li>
        <a
          href="https://docs.openshift.com/container-platform/4.1/installing/installing_aws/installing-aws-account.html"
          target="_blank"
        >
          Configure an AWS account
           
          <span
            aria-hidden="true"
            className="fa fa-external-link"
          />
        </a>
         
        to host the cluster
      </li>
    </ul>
    <h3
      className="pf-c-title pf-m-md"
      id="list2-title"
    >
      Procedure
    </h3>
    <ol
      aria-labelledby="list2-title"
    >
      <li>
        Download the OpenShift installer
      </li>
      <li>
        Deploy the cluster
      </li>
      <li>
        Access your cluster
      </li>
    </ol>
    <h3
      className="cluster-install-step"
    >
      Step 1: Download the OpenShift installer
    </h3>
    <p>
      Download and extract the latest version of the OpenShift installer for your operating system from the link below.
    </p>
    <p>
      Note: The OpenShift installer is only available for Linux and macOS at this time.
    </p>
    <p>
      <a
        target="_blank"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          className="install--download-installer"
          disabled={true}
          tabIndex="-1"
        >
          <span
            aria-hidden="true"
            className="fa fa-download"
          />
            Download Installer
        </Button>
      </a>
    </p>
    <Popover
      appendTo={[Function]}
      aria-label="What is the OpenShift installer?"
      bodyContent={
        <div>
          The OpenShift Installer is a command-line installation wizard, prompting the user for values that it cannot determine on its own and providing reasonable defaults for everything else. For more advanced users, the installer provides facilities for varying levels of customization.
           
          <a
            href="https://docs.openshift.com/container-platform/4.1/installing/installing_aws/installing-aws-customizations.html"
            target="_blank"
          >
            Learn more
             
            <span
              aria-hidden="true"
              className="fa fa-external-link"
            />
          </a>
          .
        </div>
      }
      className={null}
      closeBtnAriaLabel="Close"
      enableFlip={true}
      footerContent={null}
      headerContent={null}
      hideOnOutsideClick={true}
      isVisible={null}
      maxWidth="calc(1.5rem + 18.75rem)"
      onHidden={[Function]}
      onHide={[Function]}
      onMount={[Function]}
      onShow={[Function]}
      onShown={[Function]}
      position="top"
      shouldClose={[Function]}
      zIndex={9999}
    >
      <a
        href="javascript:;"
      >
        <span
          className="pficon pficon-info"
        />
         
        What is the OpenShift installer?
      </a>
    </Popover>
    <h3
      className="cluster-install-step"
    >
      Step 2: Deploy the cluster
    </h3>
    <p>
      Next, deploy the cluster following the installer’s interactive prompt. Enter your pull secret, provided below, when prompted:
    </p>
    <pre>
      <span
        className="noselect"
      >
        $ 
      </span>
      ./openshift-install create cluster
    </pre>
    <div>
      <Download
        content=""
        file="pull-secret"
        style={
          Object {
            "display": "inline",
          }
        }
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          disabled={true}
        >
          <span
            aria-hidden="true"
            className="fa fa-download"
          />
            Download Pull Secret
        </Button>
      </Download>
      <CopyToClipboard
        onCopy={[Function]}
        text=""
      >
        <span
          style={
            Object {
              "margin": "10px",
            }
          }
        >
          <button
            className="btn-text-link install--copy-pull-secret"
            disabled={true}
            id="copyPullSecret"
            tabIndex="0"
            type="button"
          >
            <span
              aria-hidden="true"
              className="fa fa-paste"
            />
              Copy Pull Secret
          </button>
        </span>
      </CopyToClipboard>
    </div>
    <p />
    <Popover
      appendTo={[Function]}
      aria-label="Want to customize your deployment?"
      bodyContent={
        <div>
          The installer allows many aspects of the clusters it creates to be customized by creating and editing targets.
           
          <a
            href="https://docs.openshift.com/container-platform/4.1/installing/installing_aws/installing-aws-customizations.html"
            target="_blank"
          >
            Learn more
             
            <span
              aria-hidden="true"
              className="fa fa-external-link"
            />
          </a>
          .
        </div>
      }
      className={null}
      closeBtnAriaLabel="Close"
      enableFlip={true}
      footerContent={null}
      headerContent={null}
      hideOnOutsideClick={true}
      isVisible={null}
      maxWidth="calc(1.5rem + 18.75rem)"
      onHidden={[Function]}
      onHide={[Function]}
      onMount={[Function]}
      onShow={[Function]}
      onShown={[Function]}
      position="top"
      shouldClose={[Function]}
      zIndex={9999}
    >
      <a
        href="javascript:;"
      >
        <span
          className="pficon pficon-info"
        />
         
        Want to customize your deployment?
      </a>
    </Popover>
    <h3
      className="cluster-install-step"
    >
      Step 3: Access Your Cluster
    </h3>
    <p>
      You have taken the first steps to create your cluster. While your cluster finishes installing, take a moment to download the OpenShift command-line tools and add them to your
       
      <code>
        PATH
      </code>
      .
    </p>
    <p>
      <a
        target="_blank"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          className="install--download-cli"
          disabled={false}
          tabIndex="-1"
        >
          <span
            aria-hidden="true"
            className="fa fa-download"
          />
            Download Command-line Tools
        </Button>
      </a>
    </p>
    <p>
      When the installer is complete you will see the console URL and credentials for accessing your new cluster. A
       
      <code>
        kubeconfig
      </code>
       
      file will also be generated for you to use with the
       
      <code>
        oc
      </code>
       
      CLI tools you downloaded.
    </p>
    <Popover
      appendTo={[Function]}
      aria-label="Do you need to troubleshoot your installation?"
      bodyContent={
        <div>
          Unfortunately, there will always be some cases where OpenShift fails to install properly. In these events, it is helpful to understand the
           
          <a
            href="https://github.com/openshift/installer/blob/master/docs/user/troubleshooting.md#common-failures"
            target="_blank"
          >
            likely failure modes
             
            <span
              aria-hidden="true"
              className="fa fa-external-link"
            />
          </a>
           
          as well as
           
          <a
            href="https://github.com/openshift/installer/blob/master/docs/user/troubleshooting.md#generic-troubleshooting"
            target="_blank"
          >
            how to troubleshoot
             
            <span
              aria-hidden="true"
              className="fa fa-external-link"
            />
          </a>
           
          the failure.
        </div>
      }
      className={null}
      closeBtnAriaLabel="Close"
      enableFlip={true}
      footerContent={null}
      headerContent={null}
      hideOnOutsideClick={true}
      isVisible={null}
      maxWidth="calc(1.5rem + 18.75rem)"
      onHidden={[Function]}
      onHide={[Function]}
      onMount={[Function]}
      onShow={[Function]}
      onShown={[Function]}
      position="top"
      shouldClose={[Function]}
      zIndex={9999}
    >
      <a
        href="javascript:;"
      >
        <span
          className="pficon pficon-info"
        />
         
        Do you need to troubleshoot your installation?
      </a>
    </Popover>
  </div>
</div>
`;
